tests/errors/implicit3.f90
integer function a()
implicit None
implicit real (a)
end function